# Pure-CPP20-Neural-Network

./: .gitignore  CMakeLists.txt  figures.cpp  main.cpp  utils.cpp  utils.h  xor.cpp
src/: activators.h  neural_network.cpp  neural_network.h  neural_network_model.cpp  neural_network_model.h  shorttypes.h  utils.cpp  utils.h  weight_matrix.h
